llvm/dev/quicksort.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/dev/quicksort.llvm:60:36: error: use of undefined value '%else'
  br i1 %letmp, label %then, label %else
                                   ^
